--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./Cookies.html"</li>
+        <li><a href="recipes/Cookies.html">Cookies</a></li>
+        <li><a href="recipes/patatas.html">Patatas</a></li>
         
 
 
