--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -8,12 +8,25 @@
 </head>
 <body>
     <h1>Cookies</h1>
-    
+    <img src="../imagenes/galletas.jpg">
     <p>Se tratan de galletas de chocolate muy sabrosas.
         Se trata de un plato sencillo que se utiliza como postre
         o desayuno.
     </p>
+    <h2>Ingredientes</h2>
+<ul>
+    <li>taza de harina</li>
+    <li>huevos</li>
+    <li>mantequilla</li>
+</ul>
+    <h3>Preparación</h3>
+<ol>
+    <li>Poner los ingredientes en una taza</li>
+    <li>Agitarlos</li>
+    <li>Ponerlos en el horno 30'</li>
 
+
+</ol>
     
 </body>
 </html>
